@@ -1,20 +1,17 @@
 plugins {
     id "idea"
-    id "org.jetbrains.kotlin.jvm" version "1.3.41"
+    id "org.jetbrains.kotlin.jvm" version "1.7.10"
 }
 
-[compileKotlin, compileTestKotlin]*.kotlinOptions*.jvmTarget = "11"
+[compileKotlin, compileTestKotlin]*.kotlinOptions*.jvmTarget = "17"
 
 ext {
     junitVersion = "5.7.0"
     mockitoVersion = "3.5.11"
     assertjVersion = "3.19.0"
-    aspectjVersion = "1.9.6"
+    aspectjVersion = "1.9.20"
     lombokVersion = "1.18.16"
 }
-
-sourceCompatibility = 1.11
-targetCompatibility = 1.11
 
 idea {
     module {
@@ -36,14 +33,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect"
 
     aspectjWeaverAgent "org.aspectj:aspectjweaver:$aspectjVersion"
-    testImplementation "org.aspectj:aspectjrt:$aspectjVersion"
+    implementation "org.aspectj:aspectjrt:$aspectjVersion"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     testImplementation "org.assertj:assertj-core:$assertjVersion"
-
-    testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-    testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
 }
 
 test {
@@ -51,6 +45,8 @@ test {
     systemProperty "skipOn", findProperty("skipOn")
 
     doFirst {
-        jvmArgs "-javaagent:${configurations.aspectjWeaverAgent.singleFile}"
+        jvmArgs "--add-opens",
+                "java.base/java.lang=ALL-UNNAMED",
+                "-javaagent:${configurations.aspectjWeaverAgent.singleFile}"
     }
 }
